name:                particle-filter
version:             0.1.0.0
synopsis:            Particle filter implementation
description:         A particle filter localizes in a stochastic state space.
                     It's efficient for lower dimenionsal spaces.
license:             BSD3
license-file:        LICENSE
author:              Joe Vargas
-- maintainer:          
-- copyright:           
category:            AI
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     AI.Localization.ParticleFilter,
                       AI.Localization.ParticleFilter.Class
  -- other-modules:       
  other-extensions:    RankNTypes,
                       FlexibleContexts,
                       FlexibleInstances,
                       MultiParamTypeClasses
  build-depends:       base >=4.6 && <4.7,
                       MonadRandom >=0.1 && <0.2,
                       transformers >=0.3 && <0.4
  hs-source-dirs:      src
  default-language:    Haskell2010
